--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ h6 {
 	display: flex;
 	flex-direction: column;
 }
-.row {
+.game-grid .row {
 	display: flex;
 	flex-direction: row;
 }
@@ -67,8 +67,21 @@ h6 {
 .column {
 	width: 200px;
 	aspect-ratio: 1;
+	border: 1px solid whitesmoke;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.ship {
+	background-color: orange;
+}
+
+.hit {
+	background-color: red;
+}
+
+.miss {
+	background-color: lightblue;
 }
