--- a/src/styles.css
+++ b/src/styles.css
@@ -75,7 +75,7 @@ h6 {
 	flex-direction: row;
 }
 
-.column {
+.cell {
 	width: 200px;
 	aspect-ratio: 1;
 	border: 1px solid whitesmoke;
@@ -91,13 +91,46 @@ h6 {
 
 .hit {
 	background-color: red;
+	pointer-events: none;
 }
 
 .miss {
 	background-color: lightblue;
 }
 
+.attacked {
+	/* This is the magic property! It makes the element ignore mouse clicks. */
+	pointer-events: none;
+}
+
 .grid-row {
 	display: flex;
 	flex-direction: row;
+}
+
+.hidden {
+	display: none !important;
+}
+
+#game-over {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#game-over .dialogue {
+	width: 50%;
+	height: fit-content;
+	min-height: 50px;
+	background-color: white;
+	opacity: 1;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
 }
