--- a/src/styles.css
+++ b/src/styles.css
@@ -125,6 +125,7 @@ h6 {
 }
 
 #game-over .dialogue {
+	padding: 3rem;
 	width: 50%;
 	height: fit-content;
 	min-height: 50px;
@@ -133,4 +134,18 @@ h6 {
 	border-radius: 8px;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+}
+
+#game-over-message {
+	font-size: 2rem;
+}
+
+#game-over button {
+	padding: 0.5rem 2rem;
+	border: solid 1px grey;
+	border-radius: 8px;
+	background-color: whitesmoke;
+	font-size: 1.5rem;
 }
